--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="logo-no-background.png" alt="logo-no-background.png">
+        <img src="logo.png" alt="logo-no-background.png">
     </header>
     <main>
         <section id="userProfiles"></section>
